# FairyChess

./: CMakeLists.txt  ChessField.cpp  ChessField.hpp  ChessFieldNode.cpp  ChessFieldNode.hpp  ChessMove.cpp  ChessMove.hpp  ChessMoveAction.cpp  ChessMoveAction.hpp  ChessPiece.cpp  ChessPiece.hpp  ChessVariantRules.cpp  ChessVariantRules.hpp  CompositeBehavior.cpp  CompositeBehavior.hpp  ConditionalBehavior.cpp  ConditionalBehavior.hpp  DirectionalRiderBehavior.cpp  DirectionalRiderBehavior.hpp  FairyChess.cpp  FairyChess.hpp  PieceBehavior.cpp  PieceBehavior.hpp  PlainChessSet.cpp  PlainChessSet.hpp  README.md  RiderBehavior.cpp  RiderBehavior.hpp  fwd_decl.h  main.cpp
